[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = 'rl_sandbox'
version = "0.1.0"
description = 'Sandbox for my RL experiments'
authors = ['Roman Milishchuk <milishchuk.roman@gmail.com>']
packages = [{include = 'rl_sandbox'}]
# add config directory as package data

[tool.poetry.dependencies]
python = "^3.10"
numpy = '*'
nptyping = '*'
gym = "^0.26.1"
pygame = '*'
moviepy = '*'
torchvision = '^0.13'
torch = '^1.12'
tensorboard = '^2.0'
dm-control = '^1.0.0'
unpackable = '^0.0.4'
hydra-core = "^1.2.0"
matplotlib = "^3.0.0"
webdataset = "^0.2.20"
jaxtyping = '^0.2.0'
lovely_tensors = '^0.1.10'
torchshow = '^0.5.0'

[tool.yapf]
based_on_style = "pep8"
column_limit = 90

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

